# site-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  api.md  build.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
assets/: app-info.json
assets/nginx/: site.conf.j2
assets/polkit/: local.lsm.policy
assets/sql/: schema.sql
assets/systemd/: local-site-manager.service  local-site-manager.timer
assets/templates/: templates.toml
crates/lsm-api/: Cargo.toml
crates/lsm-api/src/: main.rs
crates/lsm-cli/: Cargo.toml
crates/lsm-cli/src/: main.rs
crates/lsm-core/: Cargo.toml
crates/lsm-core/src/: app.rs  config.rs  domain.rs  error.rs  lib.rs  logs.rs  validate.rs
crates/lsm-core/src/backup/: mod.rs
crates/lsm-core/src/ca/: mod.rs
crates/lsm-core/src/db/: mod.rs
crates/lsm-core/src/diagnostics/: mod.rs
crates/lsm-core/src/dns/: mod.rs
crates/lsm-core/src/health/: mod.rs
crates/lsm-core/src/nginx/: mod.rs
crates/lsm-core/src/privileged/: mod.rs
crates/lsm-core/src/providers/: mod.rs
crates/lsm-core/src/ssl/: mod.rs
crates/lsm-core/src/templates/: mod.rs
crates/lsm-gui/: Cargo.toml
crates/lsm-gui/src/: main.rs
crates/lsm-gui/src/ui/: about.rs  mod.rs  widgets.rs
crates/lsm-gui/src/ui/pages/: backups.rs  dashboard.rs  diagnostics.rs  dns.rs  health.rs  logs.rs  mod.rs  new_site.rs  settings.rs  sites.rs  ssl.rs  templates.rs
crates/lsm-privileged/: Cargo.toml
crates/lsm-privileged/src/: main.rs
dist-electron/main/: index.js
electron/main/: index.ts  siteManager.ts  store.ts
electron/preload/: index.ts
packaging/: build-appimage.sh  build-deb.sh  bump-version.sh  local-site-manager.desktop  local-site-manager.metainfo.xml
packaging/deb/: postinst  postrm
src/: App.tsx  global.d.ts  index.css
src/components/: ThemeToggle.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  Input.tsx  Select.tsx
src/contexts/: ThemeContext.tsx
