[workspace]
resolver = "2"
members = [
    "crates/lsm-core",
    "crates/lsm-cli",
    "crates/lsm-api",
    "crates/lsm-gui",
    "crates/lsm-privileged",
]

[workspace.package]
version = "2.0.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Local Site Manager"]
repository = ""

[workspace.dependencies]
lsm-core = { path = "crates/lsm-core" }

# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Storage / data
rusqlite = { version = "0.32", features = ["bundled"] }

# Templates / config
minijinja = "2"

# TLS / certs
openssl = "0.10"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Backup
flate2 = "1"
tar = "0.4"

# GUI
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"

# Dev
tempfile = "3"
assert_cmd = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
